--- a/main.css
+++ b/main.css
@@ -1,7 +1,40 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+}
+
+header {
+    width: 100%;
+    height: 120px;
+    text-align: center;
+    background: #d2d2d2;
+    padding: 25px;
+    border-bottom: 2px solid gray;
+}
+
+header h1 {
+    padding: 5px;
+    font-size: 24px;
+}
+
+.container button {
+    padding: 5px;
+    margin: 25px;
+}
+
+#hover {
+    background: orange;
+    color: white;
+    padding: 50px;
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    margin: 10px;
+}
+
+form {
+    margin: 50px;
 }
