--- a/main.css
+++ b/main.css
@@ -5,3 +5,35 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
+
+div{
+    width: 500px;
+    min-height: 300px;
+    margin: 0 auto;
+    margin-top: 25px;
+    text-align: center;
+    padding: 25px;
+    border: 1px solid silver;
+    border-radius: 8px;
+}
+
+h1 {
+    font-size: 28px;
+    padding: 15px;
+}
+
+h4 {
+    font-size: 6px;
+    font-style: italic;
+    font-weight: normal;
+    padding: 12px;
+}
+
+p{
+    padding: 25px 10px;
+}
+
+button {
+    margin-top: 50px 10px 10px;
+    padding: 10px 20px;
+}
